--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-health": "^1.12.0",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0"
+    "react-native-screens": "^3.15.0",
+    "react-native-svg": "^12.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
