--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ovalmoney/react-native-fitness": "^0.5.3",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-calendars": "^1.1275.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-health": "^1.12.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-health": "^1.7.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^12.4.0"
